--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.48.1",
+    "firebase-admin": "^13.1.0",
     "next": "15.1.6",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
